# rust-url-shortener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: deploy.yml  manual-deploy.yml  pr-created.yml  pr.yml  rust.yml
.init/: rust-url-shortener.service
src/: auth_service.rs  delete_handler.rs  get_all_handler.rs  lib.rs  link_handler.rs  main.rs  new_handler.rs  router.rs  server.rs  thread_pool.rs  url_record.rs
src/handlers/: mod.rs
src/router/: mod.rs
