[package]
name = "rust-url-shortener"
version = "0.9.1"
edition = "2021"
authors = ["Srdjan Tubin <stubin87@gmail.com>"]

[[bin]]
name = "rust-url-shortener"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
ctrlc = "3.2.2"
http = "0.2.7"
url = "2.2.2"
rand = "0.8.5"
redis = "0.21.5"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.91"
urlencoding = "2.1.0"
log = "0.4.17"
log4rs = "1.1.1"
